Initial push: QuantumCoin (blockchain+miner+API+P2P)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,8 +6,11 @@
   "send_button": "Send",
   "error_fill_fields": "Please fill all fields.",
   "error_invalid_amount": "Invalid amount.",
+  "error_invalid_address": "Invalid recipient address.",
   "error_tx_create": "Transaction creation failed",
   "error_tx_add": "Failed to add transaction",
+  "error_blockchain_not_connected": "Blockchain is not connected.",
+  "error_insufficient_balance": "Insufficient balance.",
   "success": "Success",
   "send_success": "Transaction sent successfully!",
   "mine_title": "Mining",
@@ -17,12 +20,12 @@
   "mine_last_block": "Last block mined: #%d (Hash: %x)",
   "mine_last_block_details": "Block Hash: %x",
   "mine_start": "Start Mining",
-  "mine_stop": "Stop Mining",
+  "mine_stop": "Stop",
   "mine_error": "Mining error: %v",
   "explorer_title": "Blockchain Explorer",
   "explorer_block": "Block #%d | Miner: %s\nHash: %x\nPrevHash: %x",
   "explorer_tx": "  TxID: %x",
-  "explorer_tx_out": "    To: %s, Amount: %d QC",
+  "explorer_tx_out": "    Amount: %d QC",
   "settings_title": "Settings",
   "settings_theme_label": "Choose Theme:",
   "settings_theme_dark": "Dark",
