--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,10 +1,41 @@
 {
-  "welcome": "Bienvenido al Explorador de QuantumCoin",
-  "wallet_menu": "1) Crear Monedero\n2) Ver Dirección\n3) Salir",
-  "new_wallet_created": "Nuevo monedero creado. Dirección:",
-  "enter_pubkey": "Introduce tu clave pública (hex): ",
-  "wallet_address_is": "La dirección del monedero es:",
-  "exit": "Saliendo...",
-  "invalid_option": "Opción no válida seleccionada.",
-  "invalid_pubkey_format": "Formato de clave pública no válido"
+  "wallet_address": "Dirección de monedero",
+  "send_title": "Enviar QuantumCoin",
+  "send_to_placeholder": "Introduce la dirección del destinatario",
+  "send_amount_placeholder": "Cantidad (QC)",
+  "send_button": "Enviar",
+  "error_fill_fields": "Por favor completa todos los campos.",
+  "error_invalid_amount": "Cantidad no válida.",
+  "error_invalid_address": "Dirección del destinatario no válida.",
+  "error_tx_create": "No se pudo crear la transacción",
+  "error_tx_add": "No se pudo agregar la transacción",
+  "error_blockchain_not_connected": "Blockchain no está conectada.",
+  "error_insufficient_balance": "Saldo insuficiente.",
+  "success": "Éxito",
+  "send_success": "¡Transacción enviada con éxito!",
+  "mine_title": "Minería",
+  "mine_status_idle": "Estado: Inactivo",
+  "mine_status_active": "Estado: Minando...",
+  "mine_last_block_none": "Último bloque minado: Ninguno",
+  "mine_last_block": "Último bloque minado: #%d (Hash: %x)",
+  "mine_last_block_details": "Hash del bloque: %x",
+  "mine_start": "Iniciar Minería",
+  "mine_stop": "Detener",
+  "mine_error": "Error de minería: %v",
+  "explorer_title": "Explorador Blockchain",
+  "explorer_block": "Bloque #%d | Minero: %s\nHash: %x\nPrevHash: %x",
+  "explorer_tx": "  TxID: %x",
+  "explorer_tx_out": "    Cantidad: %d QC",
+  "settings_title": "Configuración",
+  "settings_theme_label": "Elige tema:",
+  "settings_theme_dark": "Oscuro",
+  "settings_theme_light": "Claro",
+  "settings_lang_label": "Elige idioma:",
+  "settings_save_button": "Guardar",
+  "settings_open": "Abrir configuración",
+  "wallet_tab": "Monedero",
+  "send_tab": "Enviar",
+  "mine_tab": "Minería",
+  "explorer_tab": "Explorador",
+  "settings_tab": "Ajustes"
 }
