--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -1,10 +1,41 @@
 {
-  "welcome": "QuantumCoin Kaşifine Hoş Geldiniz",
-  "wallet_menu": "1) Cüzdan Oluştur\n2) Adresi Görüntüle\n3) Çıkış",
-  "new_wallet_created": "Yeni cüzdan oluşturuldu. Adres:",
-  "enter_pubkey": "Genel anahtarınızı girin (hex): ",
-  "wallet_address_is": "Cüzdan adresi:",
-  "exit": "Çıkılıyor...",
-  "invalid_option": "Geçersiz seçenek seçildi.",
-  "invalid_pubkey_format": "Geçersiz genel anahtar formatı"
+  "wallet_address": "Cüzdan Adresi",
+  "send_title": "QuantumCoin Gönder",
+  "send_to_placeholder": "Alıcı adresini girin",
+  "send_amount_placeholder": "Miktar (QC)",
+  "send_button": "Gönder",
+  "error_fill_fields": "Lütfen tüm alanları doldurun.",
+  "error_invalid_amount": "Geçersiz miktar.",
+  "error_invalid_address": "Geçersiz alıcı adresi.",
+  "error_tx_create": "İşlem oluşturulamadı",
+  "error_tx_add": "İşlem havuza eklenemedi",
+  "error_blockchain_not_connected": "Blockchain bağlı değil.",
+  "error_insufficient_balance": "Yetersiz bakiye.",
+  "success": "Başarılı",
+  "send_success": "Transfer gönderildi!",
+  "mine_title": "Madencilik",
+  "mine_status_idle": "Durum: Beklemede",
+  "mine_status_active": "Durum: Madencilik...",
+  "mine_last_block_none": "Son kazılan blok: Yok",
+  "mine_last_block": "Son kazılan blok: #%d (Hash: %x)",
+  "mine_last_block_details": "Blok Hash: %x",
+  "mine_start": "Madenciliği Başlat",
+  "mine_stop": "Durdur",
+  "mine_error": "Madencilik hatası: %v",
+  "explorer_title": "Blockchain Gezgini",
+  "explorer_block": "Blok #%d | Madenci: %s\nHash: %x\nPrevHash: %x",
+  "explorer_tx": "  TxID: %x",
+  "explorer_tx_out": "    Tutar: %d QC",
+  "settings_title": "Ayarlar",
+  "settings_theme_label": "Tema Seçin:",
+  "settings_theme_dark": "Koyu",
+  "settings_theme_light": "Açık",
+  "settings_lang_label": "Dil Seçin:",
+  "settings_save_button": "Kaydet",
+  "settings_open": "Ayarları Aç",
+  "wallet_tab": "Cüzdan",
+  "send_tab": "Gönder",
+  "mine_tab": "Madencilik",
+  "explorer_tab": "Gezgin",
+  "settings_tab": "Ayarlar"
 }
