--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,10 +1,41 @@
 {
-  "welcome": "欢迎使用 QuantumCoin 区块浏览器",
-  "wallet_menu": "1）创建钱包\n2）查看地址\n3）退出",
-  "new_wallet_created": "新钱包已创建，地址：",
-  "enter_pubkey": "请输入您的公钥（十六进制）：",
-  "wallet_address_is": "钱包地址是：",
-  "exit": "正在退出...",
-  "invalid_option": "选择无效的选项。",
-  "invalid_pubkey_format": "公钥格式无效"
+  "wallet_address": "钱包地址",
+  "send_title": "发送 QuantumCoin",
+  "send_to_placeholder": "输入收款地址",
+  "send_amount_placeholder": "数量 (QC)",
+  "send_button": "发送",
+  "error_fill_fields": "请填写所有字段。",
+  "error_invalid_amount": "无效的数量。",
+  "error_invalid_address": "无效的收款地址。",
+  "error_tx_create": "交易创建失败",
+  "error_tx_add": "交易添加失败",
+  "error_blockchain_not_connected": "区块链未连接。",
+  "error_insufficient_balance": "余额不足。",
+  "success": "成功",
+  "send_success": "交易发送成功！",
+  "mine_title": "挖矿",
+  "mine_status_idle": "状态：空闲",
+  "mine_status_active": "状态：挖矿中...",
+  "mine_last_block_none": "最近挖到的区块：无",
+  "mine_last_block": "最近挖到的区块：#%d（哈希：%x）",
+  "mine_last_block_details": "区块哈希：%x",
+  "mine_start": "开始挖矿",
+  "mine_stop": "停止",
+  "mine_error": "挖矿错误：%v",
+  "explorer_title": "区块浏览器",
+  "explorer_block": "区块 #%d | 矿工：%s\n哈希：%x\n上一区块：%x",
+  "explorer_tx": "  交易ID：%x",
+  "explorer_tx_out": "    数量：%d QC",
+  "settings_title": "设置",
+  "settings_theme_label": "选择主题：",
+  "settings_theme_dark": "深色",
+  "settings_theme_light": "浅色",
+  "settings_lang_label": "选择语言：",
+  "settings_save_button": "保存",
+  "settings_open": "打开设置",
+  "wallet_tab": "钱包",
+  "send_tab": "发送",
+  "mine_tab": "挖矿",
+  "explorer_tab": "浏览器",
+  "settings_tab": "设置"
 }
